Header and Hero are ok

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox Example Site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="inside">
+            <div class="header-logo">Header Logo</div>
+            <div class="header-links">
+                <a href="www.lukesmith.xyz">Header Link One</a>
+                <a href="www.landchad.net">Header Link Two</a>
+                <a href="www.lindypress.net">Header Link Three</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="hero">
+        <div class="inside">
+            <div class="hero-left">
+                <div class="hero-text">This website is awesome</div>
+                <div>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
+                <button class="button button1">Sign up</button>
+            </div>
+            <img src="Defenestration_1080p_NOHALO.png" alt="The ashes of civilization.">
+        </div>
+    </div>
 </body>
 </html>
