working on quote, body is sorta done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="inside">
             <div class="header-logo">Header Logo</div>
             <div class="header-links">
-                <a href="www.lukesmith.xyz">Header Link One</a>
-                <a href="www.landchad.net">Header Link Two</a>
-                <a href="www.lindypress.net">Header Link Three</a>
+                <a href="www.lukesmith.xyz">Luke Smith</a>
+                <a href="www.landchad.net">LandChad</a>
+                <a href="www.lindypress.net">LindyPress</a>
             </div>
         </div>
     </div>
@@ -27,6 +27,41 @@
                 <button class="button button1">Sign up</button>
             </div>
             <img src="Defenestration_1080p_NOHALO.png" alt="The ashes of civilization.">
+        </div>
+    </div>
+
+    <div class="body">
+        <div class="inside">
+            <div class="information-header">Some random information.</div>
+            <div class="information">
+                <div class="information-card">
+                    <img src="artifact_10_b.png" alt="Ooh fancy.">
+                    boopity boop this is some subtext yeehaw
+                </div>
+                <div class="information-card">
+                    <img src="artifact_11_b.png" alt="Ooh fancy.">
+                    Industrial Society and its Future
+                </div>
+                <div class="information-card">
+                    <img src="artifact_12_b.png" alt="Ooh fancy.">
+                    The Reign of Quantity and the Signs of the Times
+                </div>
+                <div class="information-card">
+                    <img src="artifact_13_b.png" alt="Ooh fancy.">
+                    The Populist Delusion by Nina Pavarotti
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <div class="inside">
+            <div class="text">
+                Test Quote that is extremely long and verbose to test the wrapping and alignment of this section of the website
+            </div>
+            <div class="attributation">
+                - by Me
+            </div>
         </div>
     </div>
 </body>
