--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="inside">
             <div class="header-logo">Header Logo</div>
             <div class="header-links">
-                <a href="www.lukesmith.xyz">Luke Smith</a>
-                <a href="www.landchad.net">LandChad</a>
-                <a href="www.lindypress.net">LindyPress</a>
+                <a href="https://lukesmith.xyz/">Luke Smith</a>
+                <a href="https://landchad.net">LandChad</a>
+                <a href="https://lindypress.net">LindyPress</a>
             </div>
         </div>
     </div>
@@ -36,7 +36,7 @@
             <div class="information">
                 <div class="information-card">
                     <img src="artifact_10_b.png" alt="Ooh fancy.">
-                    boopity boop this is some subtext yeehaw
+                    Ride the Tiger
                 </div>
                 <div class="information-card">
                     <img src="artifact_11_b.png" alt="Ooh fancy.">
@@ -63,6 +63,24 @@
                 - by Me
             </div>
         </div>
+    </div>
+
+    <div class="call">
+        <div class="inside">
+            <div class="call-left">
+                <div class="call-header">
+                    Call to action! It's time!
+                </div>
+                <div class="call-text">
+                    Sign up for based and redpilled takes from yours truly!
+                </div>
+            </div>
+            <button class="button2">test</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        Copyright © Stratemagician 2023
     </div>
 </body>
 </html>
